<resources>
    <string name="app_name">Booking Super Futsal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name_of_person">Name of Person</string>
    <string name="daftar_lokasi">Daftar Lokasi</string>
    <string name="lokasi_terdekat">Lokasi Terdekat</string>
    <string name="data_reservasi">Data Reservasi</string>
    <string name="tagihan">Tagihan</string>
    <string name="bantuan">Bantuan</string>
</resources>
